# compiler-workbench

./: .gitingnore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
compliter/: __init__.py  astnodes.py  cfg.py  cli.py  codegen_tac.py  inspectors.py  interpreter.py  ir.py  lexer.py  parser.py  sema.py
compliter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: hello.ml  sum.ml
polyworkbench/: __init__.py  backends.py  cfg_generic.py  lexers.py  py_debugger.py  viz.py  viz_cfg.py
