
[project]
name = "compliter"
version = "0.1.0"
description = "MiniLang compiler/interpreter (minimal)"
readme = "README.md"
authors = [{name="Your Name"}]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["compliter", "polyworkbench"]

[tool.setuptools.package-data]
compliter = []
